Link dos botões alterado - 16/08/2022

--- a/hialuroni/index.html
+++ b/hialuroni/index.html
@@ -335,17 +335,17 @@
 	</div>
 		<div class="row potes-oferta">
 			<div class="col-md-4 col-lg-4 col-sm-4 pote-item">
-				<a href="https://ev.braip.com/ref?pl=plamr4gw&ck=che2gled&af=afix2qmm2" class="cta-potes" target="_blank">
+				<a href="https://ev.braip.com/campanhas/cpa/cam8p781y" class="cta-potes" target="_blank">
 					<img height="100%" width="100%" src="img/5potes.jpg" class="img-fluid img-responsive">
 				</a>
 			</div>
 			<div class="col-md-4 col-lg-4 col-sm-4 pote-item">
-				<a href="https://ev.braip.com/ref?pl=plapvrlz&ck=che2gled&af=afix2qmm2" class="cta-potes" target="_blank">
+				<a href="https://ev.braip.com/campanhas/cpa/cam7dr70n" class="cta-potes" target="_blank">
 					<img height="100%" width="100%" src="img/3potes.jpg" class="img-fluid img-responsive">
 				</a>
 			</div>
 			<div class="col-md-4 col-lg-4 col-sm-4 pote-item">
-				<a href="https://ev.braip.com/ref?pl=pla60r9l&ck=che2gled&af=afix2qmm2" class="cta-potes" target="_blank">
+				<a href="https://ev.braip.com/campanhas/cpa/camnx9481" class="cta-potes" target="_blank">
 					<img height="100%" width="100%" src="img/1pote.jpg" class="img-fluid img-responsive">
 				</a>
 			</div>
