--- a/hialuroni/index.html
+++ b/hialuroni/index.html
@@ -53,13 +53,13 @@
 				<span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-shield-fill-check" viewBox="0 0 16 16">
   <path fill-rule="evenodd" d="M8 0c-.69 0-1.843.265-2.928.56-1.11.3-2.229.655-2.887.87a1.54 1.54 0 0 0-1.044 1.262c-.596 4.477.787 7.795 2.465 9.99a11.777 11.777 0 0 0 2.517 2.453c.386.273.744.482 1.048.625.28.132.581.24.829.24s.548-.108.829-.24a7.159 7.159 0 0 0 1.048-.625 11.775 11.775 0 0 0 2.517-2.453c1.678-2.195 3.061-5.513 2.465-9.99a1.541 1.541 0 0 0-1.044-1.263 62.467 62.467 0 0 0-2.887-.87C9.843.266 8.69 0 8 0zm2.146 5.146a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 7.793l2.646-2.647z"/>
 </svg> Compra 100% Segura e Satisfação Garantida!</span>
-				<img height="100%" width="100%" src="img/selos-cta3.jpg" class="selos-cta img-fluid img-responsive">
+				<img loading="lazy" height="100%" width="100%" src="img/selos-cta3.jpg" class="selos-cta img-fluid img-responsive">
 			</div>
 		</div>
 		
 		<div class="col-md-6 col-lg-6 col-sm-6">
 			<div class="img-principal">
-				<img height="100%" width="100%" src="img/nkb.png" class="bbb img-fluid img-responsive">
+				<img loading="lazy" height="100%" width="100%" src="img/nkb.png" class="bbb img-fluid img-responsive">
 			</div>
 		</div>
 		
@@ -80,37 +80,37 @@
 		<div class="row beneficios-hc">
 			
 			<div class="col-md-4 col-lg-4 col-sm-4 beneficio-item">
-				<img height="100%" width="100%" src="img/bnf1.jpg" class="img-fluid img-responsive">
+				<img loading="lazy" height="100%" width="100%" src="img/bnf1.jpg" class="img-fluid img-responsive">
 				<h1>Rejuvenesce a pele</h1>
 				<p>A pele envelhece ao longo do tempo e por isso entre nossas vitaminas temos o ácido ascórbico, importante para diminuição dos radicais livres que ocasionam o envelhecimento.</p>
 			</div>
 			
 			<div class="col-md-4 col-lg-4 col-sm-4 beneficio-item">
-				<img height="100%" width="100%" src="img/bnf2.jpg" class="img-fluid img-responsive">
+				<img loading="lazy" height="100%" width="100%" src="img/bnf2.jpg" class="img-fluid img-responsive">
 				<h1>Acaba com a Oleosidade</h1>
 				<p>Sua composição contém substâncias que controlam a produção sebácea, deixando a pele hidratada, iluminada naturalmente e com toque aveludado.</p>
 			</div>
 			
 			<div class="col-md-4 col-lg-4 col-sm-4 beneficio-item">
-				<img height="100%" width="100%" src="img/bnf3.jpg" class="img-fluid img-responsive">
+				<img loading="lazy" height="100%" width="100%" src="img/bnf3.jpg" class="img-fluid img-responsive">
 				<h1>Combate Rugas e Bigode Chinês</h1>
 				<p>O Hialuroni Caps possui exclusivo sistema PROSIM3D® que diminuem a aparência das rugas deixando a pele do seu rosto mais lisa e sem as marcas do tempo.</p>
 			</div>
 			
 			<div class="col-md-4 col-lg-4 col-sm-4 beneficio-item">
-				<img height="100%" width="100%" src="img/bnf4.jpg" class="img-fluid img-responsive">
+				<img loading="lazy" height="100%" width="100%" src="img/bnf4.jpg" class="img-fluid img-responsive">
 				<h1>Deixa a Pele Hidratada e Firme</h1>
 				<p>Ativo inovador rico em antioxidantes que traz a juventude e vigor a pele, promovendo brilho, frescor e firmeza na primeira aplicação.</p>
 			</div>
 			
 			<div class="col-md-4 col-lg-4 col-sm-4 beneficio-item">
-				<img height="100%" width="100%" src="img/bnf5.jpg" class="img-fluid img-responsive">
+				<img loading="lazy" height="100%" width="100%" src="img/bnf5.jpg" class="img-fluid img-responsive">
 				<h1>Diminui Manchas no Rosto</h1>
 				<p>Uniformiza a textura e o tom da pele, deixando a sua pele iluminada, sem manchas e com uma sensação revitalizadora.</p>
 			</div>
 			
 			<div class="col-md-4 col-lg-4 col-sm-4 beneficio-item">
-				<img height="100%" width="100%" src="img/bnf6.jpg" class="img-fluid img-responsive">
+				<img loading="lazy" height="100%" width="100%" src="img/bnf6.jpg" class="img-fluid img-responsive">
 				<h1>Remove a Acne</h1>
 				<p>Auxilia no combate a acne, diminuindo a vermelhidão causada pela acne e proporcionando uma pele mais clara, lisa e livre da oleosidade excessiva.</p>
 			</div>
@@ -119,7 +119,7 @@
 		<div class="row">
 		
 		<div class="col-md-6 col-lg-6 col-sm-6">
-			<img height="100%" width="100%" src="img/selodesafio.jpg" class="potes-bbb img-fluid img-responsive">
+			<img loading="lazy" height="100%" width="100%" src="img/selodesafio.jpg" class="potes-bbb img-fluid img-responsive">
 			<a href="#oferta-hc" class="cta cta-phc"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-suit-heart-fill" viewBox="0 0 16 16">
 	  <path d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z"/>
 	</svg> Quero renovar minha pele</a>
@@ -128,7 +128,7 @@
 		
 		<div class="col-md-6 col-lg-6 col-sm-6">
 			<div class="img-poderhc-bbb">
-				<img height="100%" width="100%" src="img/bbb.jpg" class="bbbnb img-fluid img-responsive">
+				<img loading="lazy" height="100%" width="100%" src="img/bbb.jpg" class="bbbnb img-fluid img-responsive">
 			</div>
 		</div>
 		</div>	
@@ -192,17 +192,17 @@
 	</div>
 		<div class="row ingredientes-formula">
 			<div class="col-md-4 col-lg-4 col-sm-4 ingrediente-item">
-				<img height="100%" width="100%" src="img/formula1.jpg" class="img-fluid img-responsive">
+				<img loading="lazy" height="100%" width="100%" src="img/formula1.jpg" class="img-fluid img-responsive">
 				<h1>Ácido Hialurônico</h1>
 				<p>Responsável por preencher os espaços que surgem entre a derme e a epiderme, ele garante a hidratação e uniformidade à pele enquanto suaviza as rugas e marcas de expressão.</p>
 			</div>
 			<div class="col-md-4 col-lg-4 col-sm-4 ingrediente-item">
-				<img height="100%" width="100%" src="img/formula2.jpg" class="img-fluid img-responsive">
+				<img loading="lazy" height="100%" width="100%" src="img/formula2.jpg" class="img-fluid img-responsive">
 				<h1>Colágeno Hidrolisado</h1>
 				<p>Encarregado de cuidar da estrutura e firmeza da pele, o colágeno é perfeito para quem deseja manter longe os sinais da idade.</p>
 			</div>
 			<div class="col-md-4 col-lg-4 col-sm-4 ingrediente-item">
-				<img height="100%" width="100%" src="img/formula3.jpg" class="img-fluid img-responsive">
+				<img loading="lazy" height="100%" width="100%" src="img/formula3.jpg" class="img-fluid img-responsive">
 				<h1>Blend de Vitaminas C, E e B6</h1>
 				<p>Combinação das principais vitaminas para cuidar da saúde e beleza da pele.</p>
 			</div>
@@ -218,7 +218,7 @@
 		</div>
 		
 		<div class="col-md-6 col-lg-6 col-sm-6 img-doutora">
-			<img height="100%" width="100%" src="img/doutora2.png" class="img-fluid img-responsive">
+			<img loading="lazy" height="100%" width="100%" src="img/doutora2.png" class="img-fluid img-responsive">
 		</div>
 		
 	</div>
@@ -293,22 +293,22 @@
 		
 	<div class="row">
 		<div class="col-md-2 col-lg-2 col-sm-2">
-			<img src="img/simonyinf.png" width="100%" height="100%" class="inf-item img-fluid">
+			<img loading="lazy" src="img/simonyinf.png" width="100%" height="100%" class="inf-item img-fluid">
 		</div>
 		<div class="col-md-2 col-lg-2 col-sm-2">
-			<img src="img/nicoleinf.png" width="100%" height="100%" class="inf-item img-fluid">
+			<img loading="lazy" src="img/nicoleinf.png" width="100%" height="100%" class="inf-item img-fluid">
 		</div>
 		<div class="col-md-2 col-lg-2 col-sm-2">
-			<img src="img/biancainf.png" width="100%" height="100%" class="inf-item img-fluid">
+			<img loading="lazy" src="img/biancainf.png" width="100%" height="100%" class="inf-item img-fluid">
 		</div>
 		<div class="col-md-2 col-lg-2 col-sm-2">
-			<img src="img/gustavoinf.png" width="100%" height="100%" class="inf-item img-fluid">
+			<img loading="lazy" src="img/gustavoinf.png" width="100%" height="100%" class="inf-item img-fluid">
 		</div>
 		<div class="col-md-2 col-lg-2 col-sm-2">
-			<img src="img/gabiinf.png" width="100%" height="100%" class="inf-item img-fluid">
+			<img loading="lazy" src="img/gabiinf.png" width="100%" height="100%" class="inf-item img-fluid">
 		</div>
 		<div class="col-md-2 col-lg-2 col-sm-2">
-			<img src="img/giovanainf.png" width="100%" height="100%" class="inf-item img-fluid">
+			<img loading="lazy" src="img/giovanainf.png" width="100%" height="100%" class="inf-item img-fluid">
 		</div>
 	</div>
 
@@ -318,7 +318,7 @@
   <path d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z"/>
 </svg> Quero renovar minha pele</a>
 			<span>Satisfação garantida ou seu dinheiro de volta!</span>
-			<img height="100%" width="100%" src="img/selos-cta.jpg" class="selos-cta img-fluid img-responsive">
+			<img loading="lazy" height="100%" width="100%" src="img/selos-cta.jpg" class="selos-cta img-fluid img-responsive">
 		</div>
 	</div>
 </div></section>
@@ -481,7 +481,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-12 col-lg-12 col-sm-12 wpp-img">
-			<img height="100%" width="100%" src="img/whatsapp.svg" class="img-fluid img-responsive">
+			<img loading="lazy" height="100%" width="100%" src="img/whatsapp.svg" class="img-fluid img-responsive">
 		</div>
 		<div class="col-md-12 col-lg-12 col-sm-12 headline-copy-cta-wpp">
 			<h1>Quer falar com uma de nossas atendentes?</h1>
@@ -490,7 +490,7 @@
   <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
 </svg> Atendimento via WhatsApp</a>
 			<span>Satisfação garantida ou seu dinheiro de volta!</span>
-			<img height="100%" width="100%" src="img/selos-cta.jpg" class="selos-cta img-fluid img-responsive">
+			<img loading="lazy" height="100%" width="100%" src="img/selos-cta.jpg" class="selos-cta img-fluid img-responsive">
 		</div>
 	</div>
 </div>
@@ -501,7 +501,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-1 col-lg-1 col-sm-1 img-crueltyfree">
-				<img height="100%" width="100%" src="img/crueltyfree.jpg" class="img-fluid img-responsive">
+				<img loading="lazy" height="100%" width="100%" src="img/crueltyfree.jpg" class="img-fluid img-responsive">
 			</div>
 			<div class="col-md-3 col-lg-3 col-sm-3">
 				<div class="links-ft">
@@ -515,13 +515,13 @@
 			<div class="col-md-3 col-lg-3 col-sm-3">
 				<div class="formaspag-ft">
 					<h2>Formas de pagamento</h2>
-					<img height="100%" width="100%" src="img/cards-ft.jpg" class="img-fluid img-responsive">
+					<img loading="lazy" height="100%" width="100%" src="img/cards-ft.jpg" class="img-fluid img-responsive">
 				</div>
 			</div>
 			<div class="col-md-3 col-lg-3 col-sm-3">
 				<div class="envio-ft">
 					<h2>Formas de envio</h2>
-					<img height="100%" width="100%" src="img/sends-ft.jpg" class="img-fluid img-responsive">
+					<img loading="lazy" height="100%" width="100%" src="img/sends-ft.jpg" class="img-fluid img-responsive">
 				</div>
 			</div>
 			<div class="col-md-2 col-lg-2 col-sm-2 redes-sociais">
@@ -533,7 +533,7 @@
   <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
 </svg></a>
 				</div>
-				<img height="100%" width="100%" src="img/secure.jpg" class="secure-ft img-fluid img-responsive" title="Compra 100% Segura!">
+				<img loading="lazy" height="100%" width="100%" src="img/secure.jpg" class="secure-ft img-fluid img-responsive" title="Compra 100% Segura!">
 			</div>
 			<div class="col-md-12 col-lg-12 col-sm-12 direitos-hc">
 				<p>© 2021 Hialuroni Caps - Todos os direitos reservados.</p>
