--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Hialuroni Caps - Ácido Hialurônico + Colágeno Hidrolisado</title>
-<link href="assets/style.css" rel="stylesheet" type="text/css" media="all">
+<link href="style.css" rel="stylesheet" type="text/css" media="all">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
 <meta name="facebook-domain-verification" content="nl0onlm6rh0ghmbx7wo86d0pzvjn2v" />
