loading lazy para imagens dos depoimentos

--- a/vsl/index.html
+++ b/vsl/index.html
@@ -101,7 +101,7 @@
                 <div class="testimonialBox">
                     <div class="content">
                         <div class="imagem-pessoa">
-                            <img src="img/a6762618789e500337dabffcf40c869e.webp">
+                            <img loading="loazy" src="img/a6762618789e500337dabffcf40c869e.webp">
                         </div>
                         <p>Com 20 dias de uso eu já senti muita diferença, meu rosto está mais firme e as rugas estão sumindo, to me sentindo novinha!</p>
                     </div><!--content-->
@@ -116,7 +116,7 @@
             <div class="swiper-slide">
                 <div class="testimonialBox">
                     <div class="imagem-pessoa">
-                        <img src="img/1-1.webp">
+                        <img loading="loazy" src="img/1-1.webp">
                     </div>
                     <div class="content">
                         <p>Comprei com a indicação da minha esteticista. Eu estava fazendo aplicação de Ácido Hialurônico local e por conta das dores não estava aguentando. Agora em cápsulas ficou tudo mais fácil. Gratidão aos desenvolvedores. ❤️</p>
@@ -132,7 +132,7 @@
             <div class="swiper-slide">
                 <div class="testimonialBox">
                     <div class="imagem-pessoa">
-                        <img src="img/Depoimento-04.jpg">
+                        <img loading="loazy" src="img/Depoimento-04.jpg">
                     </div>
                     <div class="content">
                         <p>Produto excelente! Entrega super rápida e atendimento perfeito, só tenho a agredecer a Hialuroni Caps, hoje eu me sinto muito melhor comigo mesma</p>
@@ -148,7 +148,7 @@
             <div class="swiper-slide">
                 <div class="testimonialBox">
                     <div class="imagem-pessoa">
-                        <img src="img/2-1.webp">
+                        <img loading="loazy" src="img/2-1.webp">
                     </div>
                     <div class="content">
                         <p>Já recomendei pra todas as minhas amigas! Eu pensava que o único jeito de rejuvenescer a pele seria por meio da aplicação local, mas depois de conhecer o ácido hialuronico em capsulas minha vida mudou. Além de fácil de tomar me trouxe uma pele jovem novamente, recomendo fortemente! Obrigada Hialuroni Caps ❤️</p>
