Utm propagando pro botão

--- a/vsl/index.html
+++ b/vsl/index.html
@@ -259,6 +259,18 @@
         });
     }
     </script>
+        
+    <script>
+    var url_atual = window.location.href;
+    var utm = url_atual.slice(url_atual.indexOf("?"),url_atual.length + 1)
+
+    var botao = document.querySelectorAll(".button")
+    console.log(botao)
+    console.log(botao.length)
+    for(var i = 0;i < botao.length; i++){
+        botao[i].href = botao[i].href + utm
+    }
+    </script>
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
